app/styles/global.css
/* ... */
.menu__icons-container > a {
  display: flex;
  justify-content: flex-end;
}

.menu__icon {
  width: 1.25rem;
  padding: 0.1rem;
  fill: var(--text);
}

.menu__img-container {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 16rem;
  height: 18rem;
  justify-content: center;
  background-color: hsla(237deg 98% 1% / 25%);
  justify-self: flex-start;
  border-radius: 0 15px 15px 0;
}

.menu__img-container:first-of-type {
  justify-self: flex-end;
  border-radius: 15px 0 0 15px;
}

@keyframes slide-in-from-top {
  0% {
    transform: translateY(-50%);
  }

  100% {
    transform: translateY(0);
  }
}

@keyframes slide-in-from-bottom {
  0% {
    transform: translateY(50%);
  }

  100% {
    transform: translateY(0);
  }
}

.menu__img {
  overflow: hidden;
  height: 18rem;
  animation: 0.75s ease-out 0s 1 slide-in-from-bottom;
  object-fit: cover;
}

.menu__img-bg {
  position: absolute;
  z-index: -1;
  top: 0;
  height: 18rem;
  animation: 0.75s ease-out 0s 1 slide-in-from-bottom;
}

.menu__img.boy {
  animation: 0.75s ease-out 0s 1 slide-in-from-top;
}

.menu__img-bg.boy {
  animation: 0.75s ease-out 0s 1 slide-in-from-top;
}

.modal-close {
  position: absolute;
  top: 0;
  right: 0;
  width: 70px;
  font-size: 80%;
  line-height: 50px;
  text-align: center;
  text-decoration: none;
}

.modal-close:hover {
  font-weight: var(--bold);
}

.form-validation-error {
  color: var(--theme-error);
  font-size: var(--fonts-xs);
  font-weight: var(--bold);
  margin-block-start: var(--s-1);
}

.form-info-text {
  color: var(--text-lighter);
  font-size: var(--fonts-xs);
  font-weight: var(--bold);
  margin-block-start: var(--s-1);
}

.alert {
  display: flex;
  align-items: center;
  padding: var(--s-2-5);
  background: url("/svg/background-pattern.svg");
  background-color: var(--bg-lighter);
  border-radius: var(--rounded);
  font-size: var(--fonts-sm);
  font-weight: var(--bold);
  gap: var(--s-2);
}

.alert > svg {
  width: 1.5rem;
}

.alert[data-type="warning"] > svg {
  fill: var(--theme-warning);
}

.alert[data-type="info"] > svg {
  fill: var(--theme-info);
}

.alert[data-type="success"] > svg {
  fill: var(--theme-success);
}

.tab {
  --tab-border-style: 6px solid var(--theme);

  all: unset;
  display: flex;
  width: 100%;
  justify-content: center;
  border-top: var(--tab-border-style);
  border-bottom: var(--tab-border-style);
  background-color: var(--bg-lighter);
  color: var(--text);
  cursor: pointer;
  font-size: var(--fonts-sm);
  gap: var(--s-1);
  padding-block: var(--s-1-5);
  white-space: nowrap;
}

.tab-list {
  display: flex;
  margin-block-end: var(--s-6);
}

.tab:first-of-type {
  border-left: var(--tab-border-style);
  border-bottom-left-radius: var(--rounded);
  border-top-left-radius: var(--rounded);
}

.tab:last-of-type {
  border-right: var(--tab-border-style);
  border-bottom-right-radius: var(--rounded);
  border-top-right-radius: var(--rounded);
}

.tab:hover {
  font-weight: var(--bold);
}

.tab:active {
  transform: none;
}

.tab.selected {
  background-color: var(--theme);
  color: var(--button-text);
  font-weight: var(--bold);
}

.popover-content {
  z-index: 1;
  max-width: 20rem;
  padding: var(--s-2);
  background-color: var(--bg-darker-transparent);
  border-radius: var(--rounded);
  font-size: var(--fonts-sm);
  font-weight: var(--semi-bold);
  white-space: pre-wrap;
}

@supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
  .popover-content {
    -webkit-backdrop-filter: blur(10px) brightness(75%);
    backdrop-filter: blur(10px) brightness(75%);
    background-color: transparent;
  }
}

.combobox-input {
  width: 12rem;
}

.combobox-options {
  position: absolute;
  width: 12rem;
  margin-top: var(--s-2);
  background-color: var(--bg-darker);
  border-radius: var(--rounded);
  color: var(--text);
  font-size: var(--fonts-sm);
  padding-block: var(--s-3);
  padding-inline: 0;
}

.combobox-item {
  padding: var(--s-1) var(--s-3);
  list-style: none;
}

.combobox-item.active {
  background-color: var(--theme-transparent);
}

.four-zero-one__container {
  text-align: center;
}

.four-zero-one__status-header {
  /* TODO: css var */
  font-size: xx-large;
}

.four-zero-one__link {
  color: var(--theme-secondary);
}

.button-text-paragraph {
  display: flex;
  justify-content: center;
  gap: var(--s-1);
}

.button-text-paragraph > button {
  font-size: var(--fonts-md);
}

.disabled-opaque {
  cursor: not-allowed;
  opacity: 0.6;
}

.add-players__actions {
  display: flex;
  width: 100%;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: var(--s-14);
  row-gap: var(--s-8);
}

.add-players__actions__section {
  display: flex;
  width: 18rem;
  flex-direction: column;
  align-items: flex-start;
}

.add-players__input {
  width: min(100%, 20rem);
}

.add-players__input__button {
  margin-block-start: var(--s-4);
}

.add-players__select {
  width: min(100%, 10rem);
}

.avatar__img {
  border-radius: var(--rounded);
  filter: none;
  text-indent: -10000px;
}

/* Without this the avatar becomes completely round when small */
.avatar__img.tiny {
  border-radius: 14px;
}

.avatar__placeholder {
  background-image: url("/svg/background-pattern.svg");
  block-size: var(--_avatar-size, 2.5rem);
  border-radius: var(--rounded);
  inline-size: var(--_avatar-size, 2.5rem);
}

.avatar__placeholder.tiny {
  border-radius: 14px;
}

.chat__fab {
  position: fixed;
  z-index: 50;
  bottom: 20px;
  left: 50%;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 50%;
  box-shadow: 0 2px 2px 0 var(--theme-transparent),
    0 1px 5px 0 var(--theme-transparent),
    0 3px 1px -2px var(--theme-transparent);
  transform: translate(-50%);
}

.chat__fab:active {
  transform: translate(-50%);
}

.chat__fab__icon {
  width: 28px;
}
/* ... */

